[package]
name = "eth-lake"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eth_lake"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.20.0", features = ["extension-module"]}
tokio = {version = "1", features = ["full"]}
pyo3-asyncio = {version = "0.20", features = ["tokio-runtime"]}
alloy = {version = "0.1", features = ["full"]}
url = "2.5"
arrow = "53"
parquet = "53"