[package]
name = "eth-lake"
version = "0.1.5"
edition = "2021"
description = "Python library for extracting Ethereum data to Parquet"
license = "MIT"
repository = "https://github.com/MantissaMr/eth-lake"
keywords = ["ethereum", "parquet", "data-processing", "python"]
readme = "README.md"
rust-version = "1.70"

[lib]
name = "eth_lake"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.20", features = ["extension-module", "generate-import-lib"]}
tokio = {version = "1", features = ["full"]}
pyo3-asyncio = {version = "0.20", features = ["tokio-runtime"]}
alloy = { version = "0.1", default-features = false, features = [
    "provider-http",
    "reqwest-rustls-tls",
    "rpc-types-eth",
] }
arrow = "53"
parquet = "53"
futures = "0.3"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.10" 

[package.metadata.maturin]
requires-python = ">=3.8"
classifier = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]